--- a/VLG_IMAGE_DENOISING.ipynb
+++ b/VLG_IMAGE_DENOISING.ipynb
@@ -54,7 +54,7 @@
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
         "import os\n",
-        "for dirname, _, filenames in os.walk('/content/drive/MyDrive/Dataset'):\n",
+        "for dirname, _, filenames in os.walk('/content/drive/MyDrive/Train/low/*'):\n",
         "    for filename in filenames:\n",
         "        print(os.path.join(dirname, filename))"
       ],
@@ -214,7 +214,7 @@
     {
       "cell_type": "code",
       "source": [
-        "train_images = sorted(os.listdir('/content/drive/MyDrive/Dataset'))"
+        "train_images = sorted(os.listdir('/content/drive/MyDrive/Train/low/*'))"
       ],
       "metadata": {
         "trusted": true,
@@ -229,7 +229,7 @@
         "# Assuming train_images is a list of image filenames\n",
         "train_image = []\n",
         "# Path to the directory containing images\n",
-        "base_dir = '/content/drive/MyDrive/Dataset'\n",
+        "base_dir = '/content/drive/MyDrive/Train/low/*'\n",
         "\n",
         "for im in train_images:\n",
         "    img_path = os.path.join(base_dir, im)  # Construct the full file path\n",
